--- a/zynqmp-zcu102-revA.dts
+++ b/zynqmp-zcu102-revA.dts
@@ -99,9 +99,9 @@
 &gem3 {
 	status = "okay";
 	phy-handle = <&phy0>;
-	phy-mode = "rgmii-id";
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_gem3_default>;
+	//phy-mode = "rgmii-id";
+	//pinctrl-names = "default";
+	//pinctrl-0 = <&pinctrl_gem3_default>;
 	phy0: phy@0 {
 		reg = <0>;
 		ti,rx-internal-delay = <0x8>;
@@ -121,7 +121,27 @@
 	status = "okay";
 };
 
+&i2c0 {
+	status = "okay";
+	clock-frequency = <400000>;
+	//pinctrl-names = "default", "gpio";
+	//pinctrl-0 = <&pinctrl_i2c0_default>;
+	//pinctrl-1 = <&pinctrl_i2c0_gpio>;
+	//scl-gpios = <&gpio 14 GPIO_ACTIVE_HIGH>;
+	//sda-gpios = <&gpio 15 GPIO_ACTIVE_HIGH>;
 
+};
+
+&i2c1 {
+	status = "okay";
+	clock-frequency = <400000>;
+	//pinctrl-names = "default", "gpio";
+	//pinctrl-0 = <&pinctrl_i2c1_default>;
+	//pinctrl-1 = <&pinctrl_i2c1_gpio>;
+	//scl-gpios = <&gpio 16 GPIO_ACTIVE_HIGH>;
+	//sda-gpios = <&gpio 17 GPIO_ACTIVE_HIGH>;
+
+};
 
 &pinctrl0 {
 	status = "okay";
@@ -203,44 +223,44 @@
 		};
 	};
 
-	pinctrl_gem3_default: gem3-default {
-		mux {
-			function = "ethernet3";
-			groups = "ethernet3_0_grp";
-		};
-
-		conf {
-			groups = "ethernet3_0_grp";
-			slew-rate = <SLEW_RATE_SLOW>;
-			io-standard = <IO_STANDARD_LVCMOS18>;
-		};
-
-		conf-rx {
-			pins = "MIO70", "MIO71", "MIO72", "MIO73", "MIO74",
-									"MIO75";
-			bias-high-impedance;
-			low-power-disable;
-		};
-
-		conf-tx {
-			pins = "MIO64", "MIO65", "MIO66", "MIO67", "MIO68",
-									"MIO69";
-			bias-disable;
-			low-power-enable;
-		};
-
-		mux-mdio {
-			function = "mdio3";
-			groups = "mdio3_0_grp";
-		};
-
-		conf-mdio {
-			groups = "mdio3_0_grp";
-			slew-rate = <SLEW_RATE_SLOW>;
-			io-standard = <IO_STANDARD_LVCMOS18>;
-			bias-disable;
-		};
-	};
+//	pinctrl_gem3_default: gem3-default {
+//		mux {
+//			function = "ethernet3";
+//			groups = "ethernet3_0_grp";
+//		};
+//
+//		conf {
+//			groups = "ethernet3_0_grp";
+//			slew-rate = <SLEW_RATE_SLOW>;
+//			io-standard = <IO_STANDARD_LVCMOS18>;
+//		};
+//
+//		conf-rx {
+//			pins = "MIO70", "MIO71", "MIO72", "MIO73", "MIO74",
+//									"MIO75";
+//			bias-high-impedance;
+//			low-power-disable;
+//		};
+//
+//		conf-tx {
+//			pins = "MIO64", "MIO65", "MIO66", "MIO67", "MIO68",
+//									"MIO69";
+//			bias-disable;
+//			low-power-enable;
+//		};
+//
+//		mux-mdio {
+//			function = "mdio3";
+//			groups = "mdio3_0_grp";
+//		};
+//
+//		conf-mdio {
+//			groups = "mdio3_0_grp";
+//			slew-rate = <SLEW_RATE_SLOW>;
+//			io-standard = <IO_STANDARD_LVCMOS18>;
+//			bias-disable;
+//		};
+//	};
 
 
 	pinctrl_sdhci1_default: sdhci1-default {
