Add macro AD937X_SPI_FREQ

--- a/adi-adrv9371.dtsi
+++ b/adi-adrv9371.dtsi
@@ -171,7 +171,7 @@
 
 };
 
-
+#define AD937X_SPI_FREQ 15000000
 
 &spi0 {
 
@@ -361,7 +361,7 @@
 		compatible = "adi,ad9371";
 		reg = <1>;
 		/* SPI Setup */
-		spi-max-frequency = <15000000>;
+		spi-max-frequency = <AD937X_SPI_FREQ>;
 
 		/* Clocks */
 		clocks = <&jesd_Rx_axi_0>, <&jesd_Tx_axi_0>, <&clk0_ad9528 4>, <&clk0_ad9528 4>, <&clk0_ad9528 11>;
@@ -377,7 +377,7 @@
 		compatible = "adi,ad9371";
 		reg = <2>;
 		/* SPI Setup */
-		spi-max-frequency = <15000000>;
+		spi-max-frequency = <AD937X_SPI_FREQ>;
 
 		/* Clocks */
 		clocks = <&jesd_Rx_axi_1>, <&jesd_Tx_axi_1>, <&clk0_ad9528 6>, <&clk0_ad9528 6>, <&clk0_ad9528 11>;
@@ -398,7 +398,7 @@
 		compatible = "adi,ad9371";
 		reg = <1>;
 		/* SPI Setup */
-		spi-max-frequency = <15000000>;
+		spi-max-frequency = <AD937X_SPI_FREQ>;
 
 		/* Clocks */
 		clocks = <&jesd_Rx_axi_2>, <&jesd_Tx_axi_2>, <&clk0_ad9528 1>, <&clk0_ad9528 1>, <&clk0_ad9528 11>;
@@ -414,7 +414,7 @@
 		compatible = "adi,ad9371";
 		reg = <2>;
 		/* SPI Setup */
-		spi-max-frequency = <15000000>;
+		spi-max-frequency = <AD937X_SPI_FREQ>;
 
 		/* Clocks */
 		clocks = <&jesd_Rx_axi_3>, <&jesd_Tx_axi_3>, <&clk0_ad9528 3>, <&clk0_ad9528 3>, <&clk0_ad9528 11>;
