--- a/zynqmp-zcu102-revA.dts
+++ b/zynqmp-zcu102-revA.dts
@@ -402,6 +402,37 @@
 //	};
 //};
 
+&qspi {
+	status = "okay";
+	is-dual = <0>;
+	num-cs = <1>;
+	flash@0 {
+		#address-cells = <1>;
+		#size-cells = <1>;
+		spi-tx-bus-width = <1>;
+		spi-rx-bus-width = <4>;
+		compatible = "n25q128a13";
+		reg = <0x0>;
+		spi-max-frequency = <5000000>;
+		partition@0 {
+			label = "boot";
+			reg = <0x00000000 0x00400000>;
+		};
+		partition@400000 {
+			label = "bootenv";
+			reg = <0x00400000 0x00100000>;
+		};
+		partition@500000 {
+			label = "bootenv2";
+			reg = <0x00500000 0x00100000>;
+		};
+		partition@600000 {
+			label = "config";
+			reg = <0x00600000 0x00100000>;
+		};
+	};
+};
+
 &rtc {
 	status = "okay";
 };
