--- a/zynqmp-zcu102-revA.dts
+++ b/zynqmp-zcu102-revA.dts
@@ -338,69 +338,9 @@
 	};
 
 	pinctrl_gpio_default: gpio-default {
-		mux-sw {
-			function = "gpio0";
-			groups = "gpio0_22_grp", "gpio0_23_grp";
-		};
 
-		conf-sw {
-			groups = "gpio0_22_grp", "gpio0_23_grp";
-			slew-rate = <SLEW_RATE_SLOW>;
-			io-standard = <IO_STANDARD_LVCMOS18>;
-		};
-
-		mux-msp {
-			function = "gpio0";
-			groups = "gpio0_13_grp", "gpio0_38_grp";
-		};
-
-		conf-msp {
-			groups = "gpio0_13_grp", "gpio0_38_grp";
-			slew-rate = <SLEW_RATE_SLOW>;
-			io-standard = <IO_STANDARD_LVCMOS18>;
-		};
-
-		conf-pull-up {
-			pins = "MIO22", "MIO23";
-			bias-pull-up;
-		};
-
-		conf-pull-none {
-			pins = "MIO13", "MIO38";
-			bias-disable;
-		};
 	};
 };
-
-//&qspi {
-//	status = "okay";
-//	is-dual = <1>;
-//	flash@0 {
-//		compatible = "m25p80"; /* 32MB */
-//		#address-cells = <1>;
-//		#size-cells = <1>;
-//		reg = <0x0>;
-//		spi-tx-bus-width = <1>;
-//		spi-rx-bus-width = <4>; /* FIXME also DUAL configuration possible */
-//		spi-max-frequency = <108000000>; /* Based on DC1 spec */
-//		partition@qspi-fsbl-uboot { /* for testing purpose */
-//			label = "qspi-fsbl-uboot";
-//			reg = <0x0 0x100000>;
-//		};
-//		partition@qspi-linux { /* for testing purpose */
-//			label = "qspi-linux";
-//			reg = <0x100000 0x500000>;
-//		};
-//		partition@qspi-device-tree { /* for testing purpose */
-//			label = "qspi-device-tree";
-//			reg = <0x600000 0x20000>;
-//		};
-//		partition@qspi-rootfs { /* for testing purpose */
-//			label = "qspi-rootfs";
-//			reg = <0x620000 0x5E0000>;
-//		};
-//	};
-//};
 
 &qspi {
 	status = "okay";
@@ -437,48 +377,23 @@
 	status = "okay";
 };
 
-//&sdhci0 {
-//	status = "okay";
-//	//xlnx,mio_bank = <0>;
-//	xlnx,mio_bank = <0>;
-//};
-//
-///* SD1 with level shifter */
-//&sdhci1 {
-//	status = "okay";
-//	no-1-8-v;
-//	xlnx,mio_bank = <1>;
-//};
-
-
-&sdhci1 {
-	status = "okay";
-	no-1-8-v;
-	bus-width = <4>;
-	xlnx,mio_bank = <1>;
-	//pinctrl-names = "default";   // 忘了写这个 default
-	//pinctrl-0 = <&pinctrl_sdhci1_default>;
-};
-
+/* eMMC mmc0: SDHCI controller on ff160000.sdhci */
 &sdhci0 {
-	//status = "okay";
-	//no-1-8-v;
-	////bus-width = <8>;
-	////mmc-hs200-1_8v;
-	//xlnx,mio_bank = <0>;
-
-
-
 	status = "okay";
 	bus-width = <8>;
 	clock-frequency = <20000000>;
+	//no-1-8-v;
 	xlnx,mio_bank = <0>;
 	no-sd;
 	no-sdio;
 	disable-wp;
+};
 
-	//pinctrl-names = "default";   // 忘了写这个 default
-	//pinctrl-0 = <&pinctrl_sdhci0_default>;
+/* MircoSD mmc1: SDHCI controller on ff170000.sdhci [ff170000.sdhci] */
+&sdhci1 {
+	status = "okay";
+	no-1-8-v;
+	xlnx,mio_bank = <1>;
 };
 
 
