--- a/zynqmp-zcu102-revA.dts
+++ b/zynqmp-zcu102-revA.dts
@@ -30,8 +30,8 @@
 		i2c1 = &i2c1;
 		//mmc0 = &sdhci1;
 		//mmc1 = &sdhci0;
-		mmc0 = &sdhci1;
-		mmc1 = &sdhci0;
+		mmc0 = &sdhci0;
+		mmc1 = &sdhci1;
 		rtc0 = &rtc;
 		serial0 = &uart0;
 		serial1 = &uart1;
@@ -48,7 +48,7 @@
 
 	memory@0 {
 		device_type = "memory";
-		reg = <0x0 0x0 0x0 0x80000000>, <0x8 0x00000000 0x0 0x80000000>;
+		reg = <0x0 0x0 0x0 0x80000000>;
 	};
 
 };
