build: include dt_ver file

--- a/zynqmp-zcu102-rev1.0.dts
+++ b/zynqmp-zcu102-rev1.0.dts
@@ -16,4 +16,5 @@
 / {
 	model = "ZynqMP ZCU102 Rev1.0";
 	compatible = "xlnx,zynqmp-zcu102-rev1.0", "xlnx,zynqmp-zcu102", "xlnx,zynqmp";
+	/include/ "dt_ver.dtsi"
 };
