fix: dfe with 64bit addr formart

--- a/rau-fpga.dtsi
+++ b/rau-fpga.dtsi
@@ -5,7 +5,7 @@
 
 	rau_glob_info: rau_glob_info@0xA0000000 {
 		compatible = "rau,global-info-1.0";
-		reg = <0xA0000000 0x10>;
+		reg = <0x0 0xA0000000 0x10>;
 	};
 
 	//-------------- RTX carrier channel --------------------------
@@ -14,39 +14,39 @@
 		#clock-cells = <1>;
 		compatible = "rau,rtx-carrier-channel-0.1";
 		//reg = <0xA0000840 0x800>;//总共
-		reg = <0xA0000840 0x40>,
-		      <0xA0000880 0x40>,
-		      <0xA00008C0 0x40>,
-		      <0xA0000900 0x40>,
-		      <0xA0000940 0x40>,
-		      <0xA0000980 0x40>,
-		      <0xA00009C0 0x40>,
-		      <0xA0000A00 0x40>,
-		      <0xA0000A40 0x40>,
-		      <0xA0000A80 0x40>,
-		      <0xA0000AC0 0x40>,
-		      <0xA0000B00 0x40>,
-		      <0xA0000B40 0x40>,
-		      <0xA0000B80 0x40>,
-		      <0xA0000BC0 0x40>,
-		      <0xA0000C00 0x40>,
-		      <0xA0000C40 0x40>,
-		      <0xA0000C80 0x40>,
-		      <0xA0000CC0 0x40>,
-		      <0xA0000D00 0x40>,
-		      <0xA0000D40 0x40>,
-		      <0xA0000D80 0x40>,
-		      <0xA0000DC0 0x40>,
-		      <0xA0000E00 0x40>,
-		      <0xA0000E40 0x40>,
-		      <0xA0000E80 0x40>,
-		      <0xA0000EC0 0x40>,
-		      <0xA0000F00 0x40>,
-		      <0xA0000F40 0x40>,
-		      <0xA0000F80 0x40>,
-		      <0xA0000FC0 0x40>,
-		      <0xA0001000 0x40>,
-		      <0xA0001488 0x08>;// bw rst busy
+		reg = <0x0 0xA0000840 0x40>,
+		      <0x0 0xA0000880 0x40>,
+		      <0x0 0xA00008C0 0x40>,
+		      <0x0 0xA0000900 0x40>,
+		      <0x0 0xA0000940 0x40>,
+		      <0x0 0xA0000980 0x40>,
+		      <0x0 0xA00009C0 0x40>,
+		      <0x0 0xA0000A00 0x40>,
+		      <0x0 0xA0000A40 0x40>,
+		      <0x0 0xA0000A80 0x40>,
+		      <0x0 0xA0000AC0 0x40>,
+		      <0x0 0xA0000B00 0x40>,
+		      <0x0 0xA0000B40 0x40>,
+		      <0x0 0xA0000B80 0x40>,
+		      <0x0 0xA0000BC0 0x40>,
+		      <0x0 0xA0000C00 0x40>,
+		      <0x0 0xA0000C40 0x40>,
+		      <0x0 0xA0000C80 0x40>,
+		      <0x0 0xA0000CC0 0x40>,
+		      <0x0 0xA0000D00 0x40>,
+		      <0x0 0xA0000D40 0x40>,
+		      <0x0 0xA0000D80 0x40>,
+		      <0x0 0xA0000DC0 0x40>,
+		      <0x0 0xA0000E00 0x40>,
+		      <0x0 0xA0000E40 0x40>,
+		      <0x0 0xA0000E80 0x40>,
+		      <0x0 0xA0000EC0 0x40>,
+		      <0x0 0xA0000F00 0x40>,
+		      <0x0 0xA0000F40 0x40>,
+		      <0x0 0xA0000F80 0x40>,
+		      <0x0 0xA0000FC0 0x40>,
+		      <0x0 0xA0001000 0x40>,
+		      <0x0 0xA0001488 0x08>;// bw rst busy
 
 		      dfe,node-is-uplink;
 	};
@@ -57,39 +57,39 @@
 		#clock-cells = <1>;
 		compatible = "rau,rtx-carrier-channel-0.1";
 		//reg = <0xA0000040 0x800>;//总共
-		reg = <0xA0000040 0x40>,
-		      <0xA0000080 0x40>,
-		      <0xA00000C0 0x40>,
-		      <0xA0000100 0x40>,
-		      <0xA0000140 0x40>,
-		      <0xA0000180 0x40>,
-		      <0xA00001C0 0x40>,
-		      <0xA0000200 0x40>,
-		      <0xA0000240 0x40>,
-		      <0xA0000280 0x40>,
-		      <0xA00002C0 0x40>,
-		      <0xA0000300 0x40>,
-		      <0xA0000340 0x40>,
-		      <0xA0000380 0x40>,
-		      <0xA00003C0 0x40>,
-		      <0xA0000400 0x40>,
-		      <0xA0000440 0x40>,
-		      <0xA0000480 0x40>,
-		      <0xA00004C0 0x40>,
-		      <0xA0000500 0x40>,
-		      <0xA0000540 0x40>,
-		      <0xA0000580 0x40>,
-		      <0xA00005C0 0x40>,
-		      <0xA0000600 0x40>,
-		      <0xA0000640 0x40>,
-		      <0xA0000680 0x40>,
-		      <0xA00006C0 0x40>,
-		      <0xA0000700 0x40>,
-		      <0xA0000740 0x40>,
-		      <0xA0000780 0x40>,
-		      <0xA00007C0 0x40>,
-		      <0xA0000800 0x40>,
-		      <0xA0001480 0x08>;// bw rst busy
+		reg = <0x0 0xA0000040 0x40>,
+		      <0x0 0xA0000080 0x40>,
+		      <0x0 0xA00000C0 0x40>,
+		      <0x0 0xA0000100 0x40>,
+		      <0x0 0xA0000140 0x40>,
+		      <0x0 0xA0000180 0x40>,
+		      <0x0 0xA00001C0 0x40>,
+		      <0x0 0xA0000200 0x40>,
+		      <0x0 0xA0000240 0x40>,
+		      <0x0 0xA0000280 0x40>,
+		      <0x0 0xA00002C0 0x40>,
+		      <0x0 0xA0000300 0x40>,
+		      <0x0 0xA0000340 0x40>,
+		      <0x0 0xA0000380 0x40>,
+		      <0x0 0xA00003C0 0x40>,
+		      <0x0 0xA0000400 0x40>,
+		      <0x0 0xA0000440 0x40>,
+		      <0x0 0xA0000480 0x40>,
+		      <0x0 0xA00004C0 0x40>,
+		      <0x0 0xA0000500 0x40>,
+		      <0x0 0xA0000540 0x40>,
+		      <0x0 0xA0000580 0x40>,
+		      <0x0 0xA00005C0 0x40>,
+		      <0x0 0xA0000600 0x40>,
+		      <0x0 0xA0000640 0x40>,
+		      <0x0 0xA0000680 0x40>,
+		      <0x0 0xA00006C0 0x40>,
+		      <0x0 0xA0000700 0x40>,
+		      <0x0 0xA0000740 0x40>,
+		      <0x0 0xA0000780 0x40>,
+		      <0x0 0xA00007C0 0x40>,
+		      <0x0 0xA0000800 0x40>,
+		      <0x0 0xA0001480 0x08>;// bw rst busy
 
 		clocks = <&rf_port_axi_7 0>, <&rf_port_axi_6 0>, <&rf_port_axi_5 0>, <&rf_port_axi_4 0>,
 		         <&rf_port_axi_3 0>, <&rf_port_axi_2 0>, <&rf_port_axi_1 0>, <&rf_port_axi_0 0>;
@@ -103,8 +103,8 @@
 	rf_port_axi_0: RF-Port-1A@0xA0001040 {
 		#clock-cells = <1>;
 		compatible = "rau,rf-port-0.1";
-		reg = <0xA0001040 0x40>,
-		      <0xA00014C0 0x04>; // Port_SW_Control
+		reg = <0x0 0xA0001040 0x40>,
+		      <0x0 0xA00014C0 0x04>; // Port_SW_Control
 
 		clocks = <&trx0_ad9371_a 3>, <&trx0_ad9371_a 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -116,8 +116,8 @@
 	rf_port_axi_1: RF-Port-1B@0xA0001080 {
 		#clock-cells = <1>;
 		compatible = "rau,rf-port-0.1";
-		reg = <0xA0001080 0x40>,
-		      <0xA00014C4 0x04>; // Port_SW_Control
+		reg = <0x0 0xA0001080 0x40>,
+		      <0x0 0xA00014C4 0x04>; // Port_SW_Control
 
 		clocks = <&trx0_ad9371_a 3>, <&trx0_ad9371_a 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -128,8 +128,8 @@
 	rf_port_axi_2: RF-Port-2A@0xA00010C0 {
 		#clock-cells = <1>;
 		compatible = "rau,rf-port-0.1";
-		reg = <0xA00010C0 0x40>,
-		      <0xA00014C8 0x04>; // Port_SW_Control
+		reg = <0x0 0xA00010C0 0x40>,
+		      <0x0 0xA00014C8 0x04>; // Port_SW_Control
 
 		clocks = <&trx0_ad9371_b 3>, <&trx0_ad9371_b 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -140,8 +140,8 @@
 	rf_port_axi_3: RF-Port-2B@0xA0001100 {
 		#clock-cells = <1>;
 		compatible = "rau,rf-port-0.1";
-		reg = <0xA0001100 0x40>,
-		      <0xA00014CC 0x04>; // Port_SW_Control
+		reg = <0x0 0xA0001100 0x40>,
+		      <0x0 0xA00014CC 0x04>; // Port_SW_Control
 
 		clocks = <&trx0_ad9371_b 3>, <&trx0_ad9371_b 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -155,8 +155,8 @@
 	rf_port_axi_4: RF-Port-3A@0xA0001140 {
 		#clock-cells = <1>;
 		compatible = "rau,rf-port-0.1";
-		reg = <0xA0001140 0x40>,
-		      <0xA00014D0 0x04>; // Port_SW_Control
+		reg = <0x0 0xA0001140 0x40>,
+		      <0x0 0xA00014D0 0x04>; // Port_SW_Control
 
 		clocks = <&trx0_ad9371_c 3>, <&trx0_ad9371_c 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -168,8 +168,8 @@
 	rf_port_axi_5: RF-Port-3B@0xA0001180 {
 		#clock-cells = <1>;
 		compatible = "rau,rf-port-0.1";
-		reg = <0xA0001180 0x40>,
-		      <0xA00014D4 0x04>; // Port_SW_Control
+		reg = <0x0 0xA0001180 0x40>,
+		      <0x0 0xA00014D4 0x04>; // Port_SW_Control
 
 		clocks = <&trx0_ad9371_c 3>, <&trx0_ad9371_c 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -180,8 +180,8 @@
 	rf_port_axi_6: RF-Port-4A@0xA00011C0 {
 		#clock-cells = <1>;
 		compatible = "rau,rf-port-0.1";
-		reg = <0xA00011C0 0x40>,
-		      <0xA00014D8 0x04>; // Port_SW_Control
+		reg = <0x0 0xA00011C0 0x40>,
+		      <0x0 0xA00014D8 0x04>; // Port_SW_Control
 
 		clocks = <&trx0_ad9371_d 3>, <&trx0_ad9371_d 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -192,8 +192,8 @@
 	rf_port_axi_7: RF-Port-4B@0xA0001200 {
 		#clock-cells = <1>;
 		compatible = "rau,rf-port-0.1";
-		reg = <0xA0001200 0x40>,
-		      <0xA00014DC 0x04>; // Port_SW_Control
+		reg = <0x0 0xA0001200 0x40>,
+		      <0x0 0xA00014DC 0x04>; // Port_SW_Control
 
 		clocks = <&trx0_ad9371_d 3>, <&trx0_ad9371_d 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
