feat: intc & axi iic

--- a/zynqmp-zcu102-rev1.0.dts
+++ b/zynqmp-zcu102-rev1.0.dts
@@ -18,3 +18,5 @@
 	compatible = "xlnx,zynqmp-zcu102-rev1.0", "xlnx,zynqmp-zcu102", "xlnx,zynqmp";
 	/include/ "dt_ver.dtsi"
 };
+
+#include "peripheral.dtsi"
