--- a/rau-fpga.dtsi
+++ b/rau-fpga.dtsi
@@ -205,3 +205,63 @@
 
 };
 
+&fpga_axi {
+
+	axi_intc_1: interrupt-controller@a0024000 {
+		#interrupt-cells = <2>;
+		clocks = <&clkc 71>;
+		compatible = "xlnx,xps-intc-1.00.a";
+		interrupt-controller ;
+		interrupt-parent = <&gic>;
+		interrupts = <0 111 4>;
+		reg = < 0x0 0xA0024000 0x1000 >;
+		xlnx,kind-of-intr = <0x1>;
+		xlnx,num-intr-inputs = <0x10>;
+	};
+
+	axi_i2c_0: axii2c0@a0020000 {
+		compatible = "xlnx,xps-iic-2.00.a";
+		//interrupt-parent = <&gic>;
+		interrupt-parent = <&axi_intc_1>;
+		clocks = <&clkc 71>;
+		reg = < 0x0 0xA0020000 0x1000 >;
+		interrupts = <0 2 >;
+		#address-cells = <1>;
+		#size-cells = <0>;
+	};
+
+
+
+	axi_i2c_1: axii2c1@a0021000 {
+		compatible = "xlnx,xps-iic-2.00.a";
+		interrupt-parent = <&gic>;
+		clocks = <&clkc 71>;
+		reg = < 0x0 0xA0021000 0x1000 >;
+		interrupts = <0 108 1>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+	};
+
+	axi_i2c_2: axii2c2@a0022000 {
+		compatible = "xlnx,xps-iic-2.00.a";
+		interrupt-parent = <&gic>;
+		clocks = <&clkc 71>;
+		reg = < 0x0 0xA0022000 0x1000 >;
+		interrupts = <0 109 1>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+	};
+
+	axi_i2c_3: axii2c3@a0023000 {
+		compatible = "xlnx,xps-iic-2.00.a";
+		interrupt-parent = <&gic>;
+		clocks = <&clkc 71>;
+		reg = < 0x0 0xA0023000 0x1000 >;
+		interrupts = <0 110 1>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+	};
+
+
+
+};
